# emulation-station

./: Cargo.toml  README.md
roms/: arm7wrestler.nds  armwrestler.nds  fire_and_sprites.nds  ldm-test.nds  yuugen-suite.nds
src/: application.rs  framecounter.rs  framehelper.rs  framelimiter.rs  main.rs  renderer.rs
src/arm/: coprocessor.rs  cpu.rs  decoder.rs  memory.rs  mod.rs  state.rs
src/arm/interpreter/: alu.rs  arm.rs  instructions.rs  mod.rs  thumb.rs
src/core/: config.rs  mod.rs  scheduler.rs
src/core/arm7/: coprocessor.rs  memory.rs  mod.rs
src/core/arm9/: coprocessor.rs  memory.rs  mod.rs
src/core/hardware/: dma.rs  input.rs  ipc.rs  irq.rs  math_unit.rs  mod.rs  rtc.rs  spi.rs  spu.rs  timer.rs
src/core/hardware/cartridge/: mod.rs
src/core/video/: mod.rs  vram.rs
src/core/video/ppu/: affine.rs  composer.rs  mod.rs  object.rs  text.rs  tile_decoder.rs
src/util/: bits.rs  mod.rs  page_table.rs  ringbuf.rs  shared.rs
