[package]
name = "emulation-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
log = "0.4.20"
paste = "1"
pixels = "0.13.0"
simplelog = "0.12.1"
winit = "0.28.6"

[profile.dev]
overflow-checks = false
opt-level = 1

[profile.release]
lto = true
