[package]
name = "emulation-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-backtrace = "0.6.0"
log = "0.4.20"
miniquad = "0.4.0-alpha.10"
paste = "1"
simplelog = "0.12.1"

[profile.dev]
overflow-checks = false
opt-level = 1

[profile.release]
lto = true
