[package]
name = "emulation-station"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-backtrace = "0.6.0"
log = "0.4.20"
paste = "1"
tinylog = { git = "https://github.com/bretzle/tinylog" }
gfx = { git = "https://github.com/bretzle/gfx" }
winit = "0.28.6"
seahash = "4.1.0"
microui = { git = "https://github.com/bretzle/microui" }

[features]
log_state = []

[profile.dev]
overflow-checks = false
opt-level = 1

[profile.release]
lto = true
panic = "abort"